--- a/Pages/DealsOfTheDay/dealsoftheday.css
+++ b/Pages/DealsOfTheDay/dealsoftheday.css
@@ -279,6 +279,10 @@ swiper {
   color: var(--yellow-color);
 }
 
+.img-wrapper {
+  overflow: hidden;
+}
+
 .img-wrapper img {
   /* max-width: 280px !important; */
   cursor: pointer;
@@ -288,13 +292,19 @@ swiper {
 .img-wrapper img:hover {
   scale: 0.95;
 }
-
 .img-wrapper div {
   overflow: hidden !important;
 }
 
 .icon {
   cursor: pointer;
+}
+.S-img-wrap img {
+  transition: all 300ms ease;
+}
+
+.S-img-wrap img:hover {
+  scale: 0.95;
 }
 /* ---------------------------------------------------Main Section Ends--------------------------------------------------- */
 
