--- a/Pages/DealsOfTheDay/responsive_dealsoftheday.css
+++ b/Pages/DealsOfTheDay/responsive_dealsoftheday.css
@@ -60,6 +60,14 @@
   .category-btn-dropdown {
     left: 3%;
   }
+
+  .img-wrapper:first-child {
+    margin-left: -60px;
+  }
+
+  .img-wrapper:last-child {
+    margin-right: -60px;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -98,6 +106,14 @@
   }
   .submit-btn {
     margin-right: 2.8rem !important;
+  }
+
+  .img-wrapper:first-child {
+    margin-left: -70px;
+  }
+
+  .img-wrapper:last-child {
+    margin-right: -70px;
   }
 }
 
@@ -142,6 +158,14 @@
   .category-list {
     margin-left: -10rem !important;
   }
+
+  .img-wrapper:first-child {
+    margin-left: -95px;
+  }
+
+  .img-wrapper:last-child {
+    margin-right: -95px;
+  }
 }
 
 @media (min-width: 1300px) {
@@ -180,6 +204,17 @@
   }
   .category-list {
     margin-left: -19rem !important;
+  }
+
+  .img-wrapper:first-child {
+    margin-left: -120px;
+  }
+
+  .img-wrapper:last-child {
+    margin-right: -120px;
+  }
+  .S-img-wrap:last-child {
+    margin-left: 30px;
   }
 }
 
