--- a/Pages/404/404.css
+++ b/Pages/404/404.css
@@ -1,12 +1,88 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-  background-color: #fff2ab;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff2ab;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.container {
+  background: #fff;
+  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 10px;
+  border-top: 8px;
+  border-top-style: solid;
+  border-top-color: #ffe352;
+  width: 70%;
+  height: 70%;
+}
+
+.header {
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+.header img {
+  width: 200px;
+}
+.fa-regular {
+  font-size: 25px;
+  color: #fff5c1;
+}
+
+.content {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
+.content h1 {
+  font-size: 100px;
+  font-weight: bolder;
+}
+.yellow {
+  color: #ffe352;
+}
+.title {
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+.para {
+  font-size: 17px;
+  font-weight: 600;
+  color: #626262;
+  line-height: 1.3;
+  margin-top: 10px;
+}
+
+.btn {
+  text-decoration: none;
+  background-color: #f0d028;
+  color: #000;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 15px;
+  padding: 6px 80px;
+  margin-top: 25px;
+}
+
+.fa-2x {
+  font: 24px;
+  cursor: pointer;
 }
