--- a/Pages/Yourcart/yourcart.css
+++ b/Pages/Yourcart/yourcart.css
@@ -67,7 +67,7 @@ body {
 
 .blur {
   transition: all 500ms ease-out;
-  filter: blur(8px);
+  filter: blur(20px);
   z-index: 0;
 }
 
@@ -599,6 +599,11 @@ body {
   display: none;
 }
 
+.desktop-close-btn {
+  display: none;
+  cursor: pointer;
+}
+
 .express {
   font-family: "Montserrat";
   font-style: normal;
@@ -632,9 +637,36 @@ body {
 }
 
 .checkout-row {
+  position: absolute;
   border-radius: 33px;
   border: 1px solid #000000;
-  height: 1000px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 300ms;
+  scale: 0;
+}
+.show-payment {
+  scale: 1;
+}
+
+.cart-num-wrap {
+  position: relative;
+  margin-top: 2rem;
+}
+
+.cart-num {
+  position: absolute;
+  top: -10px;
+  left: 40%;
+  background-color: white !important;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
 }
 
 .checkout-firstHalf {
@@ -701,7 +733,6 @@ body {
   color: #000000;
   margin-top: 2em;
 }
-/* =============================Check out Ends ================================================================= */
 
 .form__select,
 .form__input {
@@ -737,3 +768,64 @@ body {
 .form__submit:hover {
   background-color: #3e8e41;
 }
+
+.gift-card {
+  box-sizing: border-box;
+  width: 396px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.05);
+  padding: 0.32em 1em;
+  outline: none;
+  border: none;
+  border: 2px solid #000000;
+  border-radius: 33px;
+}
+
+.apply {
+  font-family: "Montserrat";
+  background: #fffcea;
+  border-radius: 10px;
+  font-style: normal;
+  border: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #f0d028;
+  transition: 200ms linear;
+  padding: 0.5em 0.8em;
+}
+
+.apply:hover {
+  background-color: #f0d028;
+  color: black;
+}
+
+.chat-wrap {
+  position: relative;
+  height: 220px;
+}
+
+.chat {
+  position: absolute;
+  width: 91.2px;
+  height: 49.74px;
+  left: 1202px;
+  top: 1218.32px;
+  background: #000000;
+  border-radius: 16.5812px;
+  color: white;
+  top: 100%;
+  left: 70%;
+}
+
+.green {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: green;
+  border-radius: 50%;
+  top: 100%;
+  left: 80%;
+}
+
+/* =============================Check out Ends ================================================================= */
