--- a/CSS/index.css
+++ b/CSS/index.css
@@ -230,12 +230,13 @@ body {
 
 .hero-sec {
   max-width: 1496px;
-  height: 494px !important;
+  height: 496px !important;
 }
 .hero-sec img {
   max-width: 1496px;
-  height: 494px !important;
+  height: 496px !important;
   border-radius: 22px;
+  object-fit: cover;
 }
 
 .clerical {
@@ -453,6 +454,7 @@ body {
 /* ------------------------------------------------Office and School Ends------------------------------------------------ */
 
 /* ---------------------------------------------------Catalog Style--------------------------------------------------- */
+
 .card-title {
   font-size: 13px;
   font-family: "Montserrat", sans-serif;
@@ -466,6 +468,16 @@ body {
   color: black;
 }
 
+.catalog .card {
+  position: relative;
+  transition: 300ms ease;
+  overflow: hidden;
+}
+
+.catalog .card:hover {
+  outline: 1px solid var(--yellow-color);
+}
+
 .add-btn {
   font-family: "Montserrat", sans-serif;
   font-size: 12px;
@@ -477,40 +489,23 @@ body {
   border: none !important;
   margin-left: 2.5rem;
   transition: 150ms;
+  position: absolute;
+  bottom: 5%;
+  right: 8%;
 }
 
 .add-btn:hover {
   scale: 0.95;
 }
 
-.catalog .card {
-  width: 10rem;
-  transition: all 200ms ease;
-  overflow: hidden;
-}
-
 .card .card-img-top {
   cursor: pointer;
-}
-
-.catalog .card:hover {
-  border: 1px solid var(--yellow-color);
-}
-
-.catalog .col-md-2 {
-  margin-right: 62px !important;
-}
-
-.catalog .col-md-2:last-child {
-  margin-right: 0rem !important;
 }
 
 /* ---------------------------------------------------Catalog Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Deals of the week --------------------------------------------------- */
-.deals-pic {
-  margin-left: 19rem;
-}
+
 /* --------------------------------------------------Deals of the week Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Image Overlay--------------------------------------------------- */
