--- a/CSS/index.css
+++ b/CSS/index.css
@@ -320,13 +320,15 @@ body {
 }
 
 .category-btn-dropdown div {
-  width: 300px;
   margin: 0.5em 0;
   padding: 0.32em;
   overflow: hidden !important;
 }
 
-.category-btn-dropdown div:hover {
+.category-btn-dropdown div div {
+  width: 300px;
+}
+.category-btn-dropdown div div:hover {
   outline: 1px solid var(--yellow-color);
 }
 
