--- a/Pages/Wishlist/wishlist.css
+++ b/Pages/Wishlist/wishlist.css
@@ -160,16 +160,17 @@ body {
 }
 
 .category-btn-dropdown div {
-  width: 300px;
   margin: 0.5em 0;
   padding: 0.32em;
   overflow: hidden !important;
 }
 
-.category-btn-dropdown div:hover {
+.category-btn-dropdown div div {
+  width: 300px;
+}
+.category-btn-dropdown div div:hover {
   outline: 1px solid var(--yellow-color);
 }
-
 .category-btn-dropdown h2 {
   cursor: pointer !important;
 }
