--- a/Pages/Yourcart/yourcart_responsive.css
+++ b/Pages/Yourcart/yourcart_responsive.css
@@ -19,6 +19,27 @@
   .card-images {
     text-align: center;
   }
+
+  h2 {
+    font-size: 16px;
+  }
+  h4 {
+    font-size: 15px;
+  }
+
+  .Quantity {
+    width: 100px;
+  }
+  h3 {
+    font-size: 14px;
+  }
+
+  .sub,
+  .add {
+    font-size: 16px;
+    height: 25px;
+    width: 25px;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -64,6 +85,9 @@
     margin-top: 0.5rem;
     width: 28.5% !important;
     height: 1px;
+  }
+  .Quantity {
+    width: 120px;
   }
 }
 
