--- a/CSS/index.css
+++ b/CSS/index.css
@@ -170,6 +170,23 @@ body {
 
 /* ---------------------------------------------------Category Style --------------------------------------------------- */
 
+.mobile-category ul {
+  padding: 0;
+  overflow: scroll;
+}
+
+.mobile-category ul li {
+  list-style-type: none;
+  padding: 12px 0;
+}
+
+.mobile-category ul li a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 12px;
+  font-weight: 700;
+}
+
 .category-container {
   width: 100vw;
   overflow-x: hidden;
@@ -334,7 +351,7 @@ body {
   padding: 0 0.32em;
   position: absolute;
   color: black;
-  top: 10rem;
+  top: 9rem;
   left: 5%;
   z-index: 10;
   background: white;
@@ -554,9 +571,6 @@ body {
 /* ---------------------------------------------------catalog Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Deals of the week --------------------------------------------------- */
-.DOTW-mobile .card {
-  min-height: 16rem;
-}
 
 /* --------------------------------------------------Deals of the week Ends--------------------------------------------------- */
 
