--- a/Pages/CategoryToBag/categorytobag.css
+++ b/Pages/CategoryToBag/categorytobag.css
@@ -146,7 +146,7 @@ body {
   padding: 0 0.32em;
   position: absolute;
   color: black;
-  top: 10rem;
+  top: 9rem;
   left: 5%;
   z-index: 10;
   background: white;
@@ -202,6 +202,25 @@ body {
 /* ---------------------------------------------------Navbar Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Category Style --------------------------------------------------- */
+
+.mobile-category ul {
+  padding: 0;
+  overflow: scroll;
+  gap: 14px;
+}
+
+.mobile-category ul li {
+  list-style-type: none;
+  padding: 14px 0;
+}
+
+.mobile-category ul li a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 12px;
+  font-weight: 700;
+  gap: 4px;
+}
 
 .category-btn {
   font-size: 11px;
@@ -281,8 +300,7 @@ body {
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 600px;
-  object-fit: cover;
+  height: 100%;
   border-radius: 30px;
 }
 
