--- a/Pages/CategoryToBag/responsive_categorytobag.css
+++ b/Pages/CategoryToBag/responsive_categorytobag.css
@@ -19,6 +19,12 @@
   .card-images {
     text-align: center;
   }
+  .swiper-slide img {
+    height: 150px;
+  }
+  h1 {
+    font-size: 32px;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -104,6 +110,12 @@
   }
   .img-wrapper {
     margin-top: -18%;
+  }
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 500px;
+    border-radius: 30px;
   }
 }
 
