--- a/Pages/Wishlist/wishlist.css
+++ b/Pages/Wishlist/wishlist.css
@@ -146,7 +146,7 @@ body {
   padding: 0 0.32em;
   position: absolute;
   color: black;
-  top: 10rem;
+  top: 9rem;
   left: 5%;
   z-index: 10;
   background: white;
@@ -202,6 +202,23 @@ body {
 /* ---------------------------------------------------Navbar Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Category Style --------------------------------------------------- */
+
+.mobile-category ul {
+  padding: 0;
+  overflow: scroll;
+}
+
+.mobile-category ul li {
+  list-style-type: none;
+  padding: 12px 0;
+}
+
+.mobile-category ul li a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 12px;
+  font-weight: 700;
+}
 
 .category-btn {
   font-size: 11px;
