--- a/Pages/Yourcart/yourcart.css
+++ b/Pages/Yourcart/yourcart.css
@@ -167,7 +167,7 @@ body {
   padding: 0 0.32em;
   position: absolute;
   color: black;
-  top: 10rem;
+  top: 9rem;
   left: 5%;
   z-index: 10;
   background: white;
@@ -225,7 +225,7 @@ body {
   padding: 0 0.32em;
   position: absolute;
   color: black;
-  top: 10rem;
+  top: 9rem;
   left: 5%;
   z-index: 10;
   background: white;
@@ -262,7 +262,34 @@ body {
 
 /* ---------------------------------------------------Navbar Style Ends--------------------------------------------------- */
 /* ---------------------------------------------------Cart Style --------------------------------------------------- */
+.first-half {
+  height: 180px;
+  position: relative;
+}
 
+.second-half {
+  height: 180px;
+  position: relative;
+}
+
+.continue-mobile {
+  width: 150px;
+  border: none;
+  color: black;
+  padding: 6px;
+  border-radius: 12px;
+  position: absolute;
+  background-color: var(--yellow-color);
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.continue-mobile a {
+  font-size: 15px;
+  color: black;
+  text-decoration: none;
+}
 .y {
   color: var(--yellow-color);
 }
@@ -365,6 +392,23 @@ body {
 /* ---------------------------------------------------Cart Style Ends--------------------------------------------------- */
 
 /* ---------------------------------------------------Category Style --------------------------------------------------- */
+
+.mobile-category ul {
+  padding: 0;
+  overflow: scroll;
+}
+
+.mobile-category ul li {
+  list-style-type: none;
+  padding: 12px 0;
+}
+
+.mobile-category ul li a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 12px;
+  font-weight: 700;
+}
 
 .category-btn {
   font-size: 11px;
