--- a/Pages/Yourcart/yourcart_responsive.css
+++ b/Pages/Yourcart/yourcart_responsive.css
@@ -6,6 +6,12 @@
   .logo {
     margin-left: 15px;
   }
+  .mobile-con-ship {
+    display: none !important;
+  }
+  .mobile-con-ship {
+    display: none;
+  }
 }
 
 @media (max-width: 768px) {
@@ -21,7 +27,7 @@
   }
 
   h2 {
-    font-size: 16px;
+    font-size: 14px;
   }
   h4 {
     font-size: 15px;
@@ -39,6 +45,9 @@
     font-size: 16px;
     height: 25px;
     width: 25px;
+  }
+  .checkout-logo-icon {
+    width: 200px !important;
   }
 }
 
@@ -88,6 +97,9 @@
   }
   .Quantity {
     width: 120px;
+  }
+  .con-mob {
+    transform: translateX(-100%);
   }
 }
 
@@ -152,6 +164,9 @@
     margin-top: 0.5rem;
     width: 18% !important;
     height: 1px;
+  }
+  .mobile-con-ship {
+    display: none;
   }
 }
 
