--- a/Pages/DealsOfTheDay/dealsoftheday.css
+++ b/Pages/DealsOfTheDay/dealsoftheday.css
@@ -281,6 +281,10 @@ body {
   margin-right: 1em;
   margin-top: 0.5em;
 }
+.dotd {
+  padding-bottom: 3px;
+  border-bottom: 3px solid var(--yellow-color);
+}
 
 /* ---------------------------------------------------Category Style Ends--------------------------------------------------- */
 
