--- a/Pages/Wishlist/wishlist.css
+++ b/Pages/Wishlist/wishlist.css
@@ -55,6 +55,12 @@ h4 {
 h6 {
   font-size: 14px;
   font-family: "Montserrat";
+  font-weight: 700;
+}
+h5 {
+  font-size: 17px;
+  font-family: "Montserrat";
+  font-weight: 700;
 }
 
 body {
@@ -65,9 +71,6 @@ body {
 }
 .row {
   max-width: 1496px;
-}
-.newrow {
-  max-width: 1900px !important;
 }
 
 .blur {
@@ -324,6 +327,11 @@ body {
   font-weight: 400;
   text-align: center;
 }
+.left-card button {
+  background-color: transparent !important;
+  outline: none;
+  border: none;
+}
 
 .card-text {
   font-size: 14px;
@@ -372,6 +380,35 @@ body {
 .left-card li {
   font-family: "Montserrat", sans-serif;
   font-size: 13px;
+}
+
+.categories {
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.collapse,
+.collapse .card-body:active,
+.collapse .card-body:focus {
+  background-color: transparent !important;
+}
+
+.topic {
+  background-color: none !important;
+}
+
+.list-group-item {
+  background-color: transparent;
+}
+
+.side-link {
+  text-decoration: none;
+  color: black;
+  font-weight: 300;
+  font-size: 13px;
+}
+.side-link:hover {
+  color: black;
 }
 
 /* ---------------------------------------------------Wishlist Ends--------------------------------------------------- */
